<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Restful</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="name">姓名</string>
    <string name="email">电子邮件</string>
    <string name="pwd">密码</string>
    <string name="btnRegister">Register</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    
    <string name="hint_email">Enter your Email ID</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_name"></string>
    
    <string name="signup">注册</string>
    
    <string name="hello_restful">Hello World, Restful</string>
    
    <string name="default_degree">-36°</string>
    <string name="default_error">ERROR</string>
    <string name="default_weather">Sunny</string>
</resources>
